--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,11 @@
         <param-value>.xhtml</param-value>
     </context-param>
 
+    <context-param>
+        <param-name>primefaces.THEME</param-name>
+        <param-value>flick</param-value>
+    </context-param>
+
     <welcome-file-list>
         <welcome-file>index.jsf</welcome-file>
     </welcome-file-list>
@@ -23,6 +28,23 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
+
+    <error-page>
+        <error-code>403</error-code>
+        <location>/error.jsf?faces-redirect=true</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error.jsf?faces-redirect=true</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error.jsf?faces-redirect=true</location>
+    </error-page>
+    <error-page>
+        <exception-type>java.lang.Exception</exception-type>
+        <location>/error.jsf?faces-redirect=true</location>
+    </error-page>
 
     <session-config>
         <session-timeout>30</session-timeout>
